# omegaloop

./: CLAUDE.md  README.md  SKILL.md  unittest_research_summary.md
.claude/commands/: omegaloop.md
.claude/skills/omegaloop/: SKILL.md
.github/: copilot-instructions.md
.github/copilot/: omegaloop.md
OmegaLoop/20260322-175105-47795f-f873/: manifest.json  research-prompt.md
OmegaLoop/20260323-014206-47795f-tick/: manifest.json
OmegaLoop/20260323-015030-47795f-tick/: manifest.json
OmegaLoop/20260323-015245-47795f-tick/: manifest.json
OmegaLoop/20260323-015517-47795f-tick/: manifest.json
OmegaLoop/20260323-015839-47795f-tick/: manifest.json
OmegaLoop/20260323-015951-47795f-tick/: manifest.json
OmegaLoop/20260323-021103-47795f-tick/: manifest.json
OmegaLoop/20260323-021212-47795f-tick/: manifest.json
docs/: README.md  architecture.md  daemon.md  dashboard.md  design.md  distributed.md  getting-started.md  loop-types.md  manifest-schema.md  skill-protocol.md  troubleshooting.md
orchestrator/: __init__.py  daemon.py  engine.py  loops.example.json  pyproject.toml
references/: agent-framework-setup.md  protocol.md
scripts/: generate-hub.py  ol-cleanup.sh  ol-commit-win.sh  ol-init.sh
templates/: ol-gitignore
tests/: README.md  conftest.py  test_bugs.py  test_daemon.py  test_distributed.py  test_git_ops.py  test_hang_prevention.py  test_machine_id.py  test_manifest.py  test_session_manager.py
tests/evals/: README.md  eval_prompts.json  run_evals.py
tests/fixtures/: manifest_v2_full.json  manifest_v2_minimal.json  task_config.json
(+32 files in other folders)
